--- a/resume/styles.css
+++ b/resume/styles.css
@@ -4,8 +4,15 @@ body {
   background-color: #FDFEF8;
 }
 
-body h1 {
+h1{
   font-size: 2.5rem;
+  width: 100%;
+  text-align: center;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+}
+
+h4, h3 {
   width: 100%;
   text-align: center;
   font-family: "Ubuntu", sans-serif;
@@ -24,9 +31,46 @@ body p {
   margin: 2% auto;
   display: grid;
   width: 90%;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: auto;
+  gap: .5rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, auto;);
+  grid-template-areas:
+    "first_row"
+    "second_row";
 }
+
+#first_row {
+  place-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  grid-area: first_row;
+  gap: .75rem;
+  margin-bottom: 20px;
+}
+
+#second_row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  grid-area: second_row;
+  place-items: center;
+  gap: .75rem;
+}
+
+@media only screen and (max-width: 680px){
+  #first_row {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
+
+  #second_row {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
+
+}
+
 
 #skills_cont img {
   width: 50%;
@@ -147,20 +191,10 @@ body:last-child {
 }
 
 @media only screen and (max-width: 680px){
-  #skills_cont {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
-    grid-gap: 1.5rem;
-  }
+
 
   #skills_cont img {
     width: 40%;
-  }
-
-
-  #mongodb_logo {
-    grid-column: 1 / 3;
-    width: 30% !important;
   }
 
   #proj_cont {
